<?xml version="1.0"?>
<package>
  <name>coms_steering</name>
  <version>0.1.0</version>
  <description>Package for controlling the steering wheel on the COMS</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/tado-aev/coms_steering</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>coms_msgs</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>coms_msgs</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
